--- a/ConversationAnalysis/app/src/main/res/layout/activity_main.xml
+++ b/ConversationAnalysis/app/src/main/res/layout/activity_main.xml
@@ -58,8 +58,24 @@
                 android:layout_width="250dp"
                 android:layout_height="250dp"
                 android:background="@drawable/roundcorner"
+                android:visibility="visible"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_action_name"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.496"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.498" />
+
+            <ImageButton
+                android:id="@+id/stop_button"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
+                android:background="@drawable/roundcorner"
+                android:visibility="invisible"
+                android:scaleType="fitCenter"
+                android:src="@drawable/stop_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.496"
