set layout to wrap content

--- a/ConversationAnalysis/app/src/main/res/layout/activity_processing.xml
+++ b/ConversationAnalysis/app/src/main/res/layout/activity_processing.xml
@@ -22,7 +22,7 @@
     <ImageView
         android:id="@+id/image_gammatone"
         android:layout_width="0dp"
-        android:layout_height="300dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
