--- a/ConversationAnalysis/app/src/main/res/layout/activity_processing.xml
+++ b/ConversationAnalysis/app/src/main/res/layout/activity_processing.xml
@@ -20,6 +20,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/audio_deleted"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/audio_deleted"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/collection_successful" />
+
     <ImageView
         android:id="@+id/image_gammatone"
         android:layout_width="0dp"
@@ -28,7 +38,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/collection_successful"
+        app:layout_constraintTop_toBottomOf="@+id/audio_deleted"
         app:srcCompat="@android:color/transparent" />
 
     <TextView
