--- a/ConversationAnalysis/app/src/main/res/menu/nav_menu.xml
+++ b/ConversationAnalysis/app/src/main/res/menu/nav_menu.xml
@@ -6,10 +6,12 @@
         <item
             android:id="@+id/nav_record"
             android:checkable="false"
+            android:icon="@drawable/ic_action_name"
             android:title="@string/nav_record_title" />
         <item
             android:id="@+id/nav_view"
             android:checkable="false"
+            android:icon="@drawable/menu_icon"
             android:title="@string/nav_view_title" />
     </group>
 
