--- a/ConversationAnalysis/app/src/main/res/layout/activity_processing.xml
+++ b/ConversationAnalysis/app/src/main/res/layout/activity_processing.xml
@@ -45,10 +45,11 @@
         android:id="@+id/send_for_research"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:text="@string/send_data"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_gammatone" />
 
@@ -57,9 +58,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginEnd="90dp"
+        android:layout_marginBottom="50dp"
         android:background="@color/microphone_background"
         android:text="@string/send_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/send_for_research" />
 
@@ -69,8 +72,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="90dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="50dp"
         android:background="@color/cancel_color"
         android:text="@string/cancel_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/send_for_research" />
 </androidx.constraintlayout.widget.ConstraintLayout>
