added delete button, and it has partial functionality

--- a/ConversationAnalysis/app/src/main/res/layout/detail_view.xml
+++ b/ConversationAnalysis/app/src/main/res/layout/detail_view.xml
@@ -41,6 +41,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/nav_menu" />
+        app:menu="@menu/detail_view_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
