updated main activity xml, and added start time

--- a/ConversationAnalysis/app/src/main/res/layout/activity_main.xml
+++ b/ConversationAnalysis/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
             android:id="@+id/record_button"
             android:layout_width="250dp"
             android:layout_height="250dp"
+            android:layout_marginTop="50dp"
             android:layout_marginBottom="200dp"
             android:background="@drawable/roundcorner"
             android:scaleType="fitCenter"
@@ -36,12 +37,14 @@
             app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/logo" />
 
         <ImageButton
             android:id="@+id/stop_button"
             android:layout_width="250dp"
             android:layout_height="250dp"
+            android:layout_marginTop="50dp"
             android:layout_marginBottom="200dp"
             android:background="@drawable/roundcorner"
             android:scaleType="fitCenter"
@@ -50,7 +53,8 @@
             app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/logo" />
 
         <Chronometer
             android:id="@+id/chronometer"
