--- a/ConversationAnalysis/app/src/main/res/layout/activity_processing.xml
+++ b/ConversationAnalysis/app/src/main/res/layout/activity_processing.xml
@@ -3,6 +3,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="#ffffff"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -35,12 +36,22 @@
         android:id="@+id/image_gammatone"
         android:layout_width="0dp"
         android:layout_height="300dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/audio_deleted"
         app:srcCompat="@android:color/transparent" />
+
+    <TextView
+        android:id="@+id/time_interval"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="time_interval"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image_gammatone" />
 
     <TextView
         android:id="@+id/send_for_research"
@@ -52,7 +63,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image_gammatone" />
+        app:layout_constraintTop_toBottomOf="@+id/time_interval" />
 
     <Button
         android:id="@+id/send_data"
