time interval working in processing view, but detail view returns a null entTime - still working on fixing

--- a/ConversationAnalysis/app/src/main/res/layout/detail_view.xml
+++ b/ConversationAnalysis/app/src/main/res/layout/detail_view.xml
@@ -11,11 +11,20 @@
         android:id="@+id/photo_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/uuid"
+        app:layout_constraintBottom_toTopOf="@+id/time_interval"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/stat_notify_error" />
+
+    <TextView
+        android:id="@+id/time_interval"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/uuid"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/uuid"
